<resources>
    <string name="app_name">Cats Lovers</string>
    <string name="ComingSoon">Coming soon</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="continue_button_title">Continue</string>
    <string name="sign_up_button_title">Sign Up</string>
    <string name="sign_in_button_title">Sign In</string>
    <string name="confirm_phone_number">Please confirm your country code\n Enter your Mobile #</string>
    <string name="approve_button_title">Approve</string>
    <string name="confirm_your_number">Code sent.\n confirm your number</string>
    <string name="select_avatar">Select avatar</string>
    <string name="maybe_later_button_title">Maybe later</string>
    <string name="yes_button_title">Yes</string>
    <string name="success_and_new_card_open">Success\n+\nNew Pet\nCard Open</string>
    <string name="pick_a_color">Choose a color</string>
    <string name="new_cat_profile_screen_title">New Cat Profile</string>
    <string name="title_activity_main">Feedstation</string>

    <!--SignIn Activity-->
    <string name="Username">Username</string>
    <string name="UsernameHint">Enter phone number</string>
    <string name="UsernameIsEmpty">Username is empty!</string>
    <string name="Password">Password</string>
    <string name="PasswordHint">Enter password</string>
    <string name="PasswordIsEmpty">Password is empty!</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnForgotPassword">Forgot Password</string>

    <!--Bottom menu-->
    <string name="map_menu">MAP</string>
    <string name="feed_menu">FEED</string>
    <string name="chat_menu">CHAT</string>
    <string name="cats_menu">CATS</string>

    <!--Maps-->
    <string name="nearby">Nearby</string>
    <string name="explore">Explore</string>
    <string name="action_save">Save</string>
    <string name="select_cat_photo">Select cat photo</string>
    <string name="my_cats">My cats</string>

    <!--Toolbar titles-->
    <string name="toolbar_title_feedstations">Feedstation</string>
    <string name="toolbar_title_feed">Feed</string>
    <string name="toolbar_title_chat">Chat</string>
    <string name="toolbar_title_cats">Cats</string>

    <!--QuickBlox-->
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>

    <string name="dlg_loading">Loading</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_restoring_chat_session_logout">Restoring session and logout</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_login">Login…</string>

    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>

    <string name="splash_create_session_error">Create session errors:</string>

    <string name="login_select_user_for_login">Select User for Login to Chat</string>
    <string name="login_cant_obtain_users">Can\'t obtain users errors</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>

    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>

    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>

    <string name="chat_sticker">Sticker</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_me">Me</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_join_error">Error join group chat</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_history_error">Load chat history errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>

    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>

    <string name="user_should_be_in_same_feedstation_with_you">User should be in the same feedstation with you</string>
    <string name="user_should_be_joined_the_feedstation">User should be joined the feedstation</string>

    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>

    <string name="please_wait">Please wait…</string>

    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="network_error_message">Network error. Please try again</string>
    <string name="retry">Retry</string>

    <!--Popup-->
    <string name="ok_3sc">OK (3SC)</string>
    <string name="thank_you_for_sharing">Thank you for sharing!</string>
    <string name="anti_flea_expires">Anti-Flea expires!</string>
    <string name="small_error_occured">A small error occurred</string>
    <string name="thank_you_for_update">Thank you for your update!</string>
    <string name="tasty">Mmmm Tasty!!</string>
    <string name="see_you_again_soon">See you again soon!</string>
    <string name="we_are_fixing_it">We are fixing it</string>
    <string name="opssss">OPSSSS</string>

    <!--Boarding-->
    <string name="onboarding_text_1">THE\nCATS LOVERS\nSOCIAL\nNETWORK</string>
    <string name="onboarding_text_2">COMMUNAL\nTREATMENT\nFOR ALL FEEDING\nSTATIONS</string>
    <string name="onboarding_text_3">ALL YOUR CAT\nNEEDS IN ONE\nTOUCH</string>
    <string name="button_onboarding_start">OK, LET\'S START</string>

    <!--Cat profile-->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="new_station_screen_title">New station</string>
    <string name="stray_cat_no_feedstation_error">For stray cat you should specify feedstation</string>
    <string name="coming_soon">Coming soon</string>
    <string name="cat_deleted">Cat successfully deleted</string>
    <string name="only_admins_can_delete_cats">Only admins can delete cats</string>
    <string name="delete_cat_question">Are you sure you want to delete this cat? This action can not be undone.</string>

    <!--Feedstation-->
    <string name="join_group">Join group</string>
    <string name="leave_group">Leave group</string>
    <string name="group_join_request_sent">Request to join group sent</string>
    <string name="group_join_invited">You invited to this group. Join</string>
    <string name="group_admin">You are admin of group</string>
    <string name="photos">photos</string>
    <string name="you_have_successfully_joined">You have successfully joined</string>
    <string name="no_feedstation">No feedstation</string>

    <!--New feed-->
    <string name="add_photo">Add photo</string>
    <string name="your_text_here">Your text here...</string>
    <string name="no">no</string>
    <string name="friends">FRIENDS</string>
    <string name="groups">GROUPS</string>

    <!--Events-->
    <string name="choose_option">Choose option</string>
    <string name="emergencies">Emergencies</string>
    <string name="warnings">Warnings</string>
    <string name="open_feedstation">Open Feedstation</string>
    <string name="choose_which_emergencies">Choose which Emergencies</string>
    <string name="poison">Poison</string>
    <string name="missing_cat">Missing Cat</string>
    <string name="carcass">Carcass</string>
    <string name="choose_which_warnings">Choose which warnings</string>

    <string name="months">months</string>
    <string name="newborn_kittens">Newborn Kittens</string>
    <string name="municipality_inspector">Municipality Inspector</string>
    <string name="cat_in_heat">Cat in Heat</string>
    <string name="stray_cat_capture_operation">Stray cat (capture operation)</string>
    <string name="hungry">Hungry</string>
    <string name="add_new_business">Add new business</string>
    <string name="clear_history">Clear history</string>
    <string name="share_this_app">Share this app</string>
    <string name="send_logs">Send logs</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="no_email">No email</string>
    <string name="business">Business</string>
    <string name="server_error">Server error</string>
    <string name="network_error">Network error</string>
    <string name="sign_out">Sign out</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="menu_report">Report</string>

</resources>
