<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_menu_add_business"
            android:icon="@drawable/ic_store_24_px"
            android:title="@string/add_new_business"/>
        <item
            android:id="@+id/navigation_menu_clear_history"
            android:icon="@drawable/ic_history_24_px"
            android:title="@string/clear_history"/>
        <item
            android:id="@+id/navigation_menu_share"
            android:title="@string/share_this_app"
            android:icon="@drawable/ic_share_primary_24dp"/>
        <item
            android:id="@+id/navigation_menu_info"
            android:icon="@drawable/ic_info_24_px"
            android:title="@string/about"/>
    </group>
</menu>