<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/map_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/feed_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/chat_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cats"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/cats_menu"
        app:showAsAction="ifRoom" />
</menu>