<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    style="@style/MatchParent"
    android:background="@color/white"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/friends_type_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="17dp"
                android:layout_weight="1"
                android:background="@drawable/messages_type_selected_shape">

                <Button
                    android:id="@+id/friends_type_button"
                    style="@style/PrimaryTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/friends" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/groups_type_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/messages_type_unselected_shape">

                <Button
                    android:id="@+id/groups_type_button"
                    style="@style/SecondaryTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/groups" />
            </FrameLayout>


        </LinearLayout>


        <FrameLayout
            android:id="@+id/frame_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
                android:id="@+id/swipy_refresh_layout_friends"
                style="@style/MatchParent">

                <ListView
                    android:id="@+id/list_dialogs_chats_friends"
                    style="@style/ListViewWithoutDividerStyle" />
            </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_groups"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
                android:id="@+id/swipy_refresh_layout_groups"
                style="@style/MatchParent">

                <ListView
                    android:id="@+id/list_dialogs_chats_groups"
                    style="@style/ListViewWithoutDividerStyle" />
            </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>

        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_chat_empty"
        style="@style/MatchWidth"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/WrapContent"
            android:text="@string/chat_empty_you_are_alone_here"
            android:textColor="@color/text_color_dark_grey"
            android:textSize="20sp" />

        <TextView
            style="@style/WrapContent"
            android:text="@string/chat_empty_start_new_chat"
            android:textColor="@color/text_color_green"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_dialogs"
        style="@style/CenterProgressBarStyle"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_dialogs_new_chat"
        style="@style/FabStyle"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_add_white_24dp" />
</android.support.design.widget.CoordinatorLayout>